# ob-scraper

./: Cargo.toml
.circleci/: config.yml
gocardless/: Cargo.toml  sandbox-config.toml.example
gocardless/src/: accounts.rs  auth.rs  client.rs  config.rs  connect.rs  files.rs  institutions.rs  lib.rs  sync.rs  transactions.rs
gocardless/templates/: auth_start.html
truelayer/src/: lib.rs  sync.rs
