[workspace]
resolver = "2"
members = ["gocardless", "truelayer"]

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = { version = "1.0.96", features = ["backtrace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt","env-filter", "local-time"] }
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["serde_derive"] }
chrono =  { version = "0.4.40", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
hyper = "1.6.0"
tracing-log = "0.2.0"
serde_urlencoded = "0.7.1"
tempfile = "3.19.1"
urlencoding = "2.1.3"
rust_decimal = "1.37.1"
futures = "0.3.31"
clap = { version = "4.5.37", features = ["derive"] }
axum = { version = "0.8.1", features = ["macros"] }
tokio-util = "0.7.14"
url = "2.5.4"
askama = { version = "0.12.1" }
toml = "0.8.20"
again = "0.1.2"
color-eyre = "0.6.3"
tracing-error = "0.2.1"
uuid = { version = "1.16.0", features = ["serde"] }
tzfile = "0.1.3"
