[workspace]
resolver = "2"
members = ["gocardless", "truelayer"]

[workspace.dependencies]
again = "0.1.2"
anyhow = { version = "1.0.99", features = ["backtrace"] }
askama = { version = "0.14.0" }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = [] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
http = "1.3.1"
hyper = "1.7.0"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = "1.37.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.8.23"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt","env-filter", "local-time"] }
tzfile = "0.1.3"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.0", features = ["serde"] }
